--- a/front/package.json
+++ b/front/package.json
@@ -9,11 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/css": "^11.10.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "axios": "^1.2.2",
     "next": "13.1.1",
+    "rc-tooltip": "^5.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
+    "react-query": "^3.39.2",
+    "recoil": "^0.7.6",
+    "recoil-persist": "^4.2.0",
+    "sass": "^1.57.1"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.4.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1"
   }
