--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "axios": "^1.2.2",
+    "js-cookie": "^3.0.1",
     "next": "13.1.1",
     "rc-tooltip": "^5.2.2",
     "react": "18.2.0",
